--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         <br>
         <p>One day I was on my computer, and I became curious about how to make a website. So then I went online and
             looked up some guides on how to make websites. I found a couple of online tutorials but not too much. I then
-            found w3schools.com then from there I was fascinated. then I started working on applications in the visual
+            found w3schools.com then from there I was fascinated. then I started working on applications in visual
             studio community 2019, Then made websites on Visual Studio Code in my free time</p>
         <br>
         <br>
-        <h2>What like to work on</h2>
+        <h2>What I like to work on</h2>
         <p>I like to work on windows programs with visual studio community edition. I also enjoy working on websites
             such as student-zone and much more</p>
         <br>
