--- a/projects.html
+++ b/projects.html
@@ -7,16 +7,18 @@
 
 <body>
     <div class="navbar">
-        <nav>
-            <ui class="navli"><a class="navlink" href="/easteregg.html"></a></ui>
-            <ui class="navli"><a class="navlink" href="/">Home</a></ui>
-            <ui class="navli"><a class="navlink" href="/projects.html">Projects</a></ui>
-            <ui class="navli"><a class="navlink" href="https://student-zone.netlify.app"
-                    target="_blank">Student-Zone</a></ui>
-            <ui class="navli"><a class="navlink" href="https://supernet.netlify.app" target="_blank">SuperNet</a></ui>
-            <ui class="navli"><a class="navlink" href="https://fieldgames.netlify.app" target="_blank">FieldGames</a>
-            </ui>
-        </nav>
+        <div style="top: 0px; position: fixed;" class="navbar">
+            <nav>
+                <ui class="navli"><a class="navlink" href="/easteregg.html"></a></ui>
+                <ui class="navli"><a class="navlink" href="/">Home</a></ui>
+                <ui class="navli"><a class="navlink" href="/projects.html">Projects</a></ui>
+                <ui class="navli"><a class="navlink" href="https://student-zone.netlify.app"
+                        target="_blank">Student-Zone</a></ui>
+                <ui class="navli"><a class="navlink" href="https://supernet.netlify.app" target="_blank">SuperNet</a></ui>
+                <ui class="navli"><a class="navlink" href="https://fieldgames.netlify.app" target="_blank">FieldGames</a>
+                </ui>
+            </nav>
+        </div>
     </div>
     <div class="header">
         <h1>Projects</h1>
@@ -41,4 +43,10 @@
         <li style="background-color: green;" class="boxli"><a class="boxli"
                 href="#you_really_thought_this_would_do_something">More Coming Soon</a></li>
     </nav>
+    <div style="bottom: 0px; position: fixed;" class="navbar">
+        <nav>
+            <ui class="navli"><i class="far fa-copyright" style="color:white;"></i><a class="navlink" href="#">2020</a></ui>
+            <ui class="navli"><a class="navlink" href="https://github.com/bcat1023" target="_blank">GitHub</a></ui>
+        </nav>
+    </div>
 </div>
