Fixed footer and header

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <div style="top: 0px; position: fixed;" class="navbar">
+    <div style="top: 0px; position: fixed;width: -webkit-fill-available;" class="navbar">
         <nav>
             <ui class="navli"><a class="navlink" href="/easteregg.html"></a></ui>
             <ui class="navli"><a class="navlink" href="/">Home</a></ui>
@@ -51,7 +51,7 @@
         <br>
     </div>
     <div class="button"><a href="projects.html"><button class="button">My Projects</button></a></div>
-    <div style="bottom: 0px; position: fixed;" class="navbar">
+    <div style="bottom: 0px; position: fixed;width: -webkit-fill-available;" class="navbar">
         <nav>
             <ui class="navli"><i class="far fa-copyright" style="color:white;"></i><a class="navlink" href="#">2020</a></ui>
             <ui class="navli"><a class="navlink" href="https://github.com/bcat1023" target="_blank">GitHub</a></ui>
