--- a/projects.html
+++ b/projects.html
@@ -3,11 +3,12 @@
 <head>
     <link rel="stylesheet" type="text/css" href="main.css" media="screen" />
     <title>Projects | Bthecats World</title>
+    <script src="https://kit.fontawesome.com/f5b6b4399c.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="navbar">
-        <div style="top: 0px; position: fixed;" class="navbar">
+        <div style="top: 0px;position: fixed;width: -webkit-fill-available;" class="navbar">
             <nav>
                 <ui class="navli"><a class="navlink" href="/easteregg.html"></a></ui>
                 <ui class="navli"><a class="navlink" href="/">Home</a></ui>
@@ -43,7 +44,7 @@
         <li style="background-color: green;" class="boxli"><a class="boxli"
                 href="#you_really_thought_this_would_do_something">More Coming Soon</a></li>
     </nav>
-    <div style="bottom: 0px; position: fixed;" class="navbar">
+    <div style="bottom: 0px;position: fixed;width: -webkit-fill-available;" class="navbar">
         <nav>
             <ui class="navli"><i class="far fa-copyright" style="color:white;"></i><a class="navlink" href="#">2020</a></ui>
             <ui class="navli"><a class="navlink" href="https://github.com/bcat1023" target="_blank">GitHub</a></ui>
