added COLOR (cuz why not)

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <br>
         <br>
     </div>
-    <div class="button"><a href="projects.html"><button class="button">My Projects</button></a></div>
+    <div id="button"><a href="projects.html"><button class="button">My Projects</button></a><br><br><br></div>
     <div style="bottom: 0px; position: fixed;width: -webkit-fill-available;" class="navbar">
         <nav>
             <ui class="navli"><i class="far fa-copyright" style="color:white;"></i><a class="navlink" href="#">2020</a></ui>
