--- a/projects.html
+++ b/projects.html
@@ -42,9 +42,16 @@
         <li style="background-color: blue;" class="boxli"><a class="boxli" href="https://supernet.netlify.app"
                 target="_blank">SuperNet</a></li>
         <li style="background-color: green;" class="boxli"><a class="boxli"
-                href="#you_really_thought_this_would_do_something">More Coming Soon</a></li>
+                href="https://smart-assist.netlify.app">Smart-Assist</a></li>
+
+</nav></div>
+<div class="navbarpro1">
+    <nav class="boxli">
+        <li style="background-color: purple;" class="boxli"><a class="boxli"
+            href="#you_really_thought_this_would_do_something">More</a></li>
     </nav>
-    <div style="bottom: 0px;position: fixed;width: -webkit-fill-available;" class="navbar">
+</div>
+                <div style="bottom: 0px;position: fixed;width: -webkit-fill-available;" class="navbar">
         <nav>
             <ui class="navli"><i class="far fa-copyright" style="color:white;"></i><a class="navlink" href="#">2020</a></ui>
             <ui class="navli"><a class="navlink" href="https://github.com/bcat1023" target="_blank">GitHub</a></ui>
