Added annconcment on home

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="main.css" media="screen" />
-    <title>Home | Bthecat World</title>
+    <title>Home | Bthecat World | New: Smart-Assist</title>
     <script src="https://kit.fontawesome.com/f5b6b4399c.js" crossorigin="anonymous"></script>
 </head>
 
@@ -16,7 +16,14 @@
                     target="_blank">Student-Zone</a></ui>
             <ui class="navli"><a class="navlink" href="https://supernet.netlify.app" target="_blank">SuperNet</a></ui>
             <ui class="navli"><a class="navlink" href="https://fieldgames.netlify.app" target="_blank">FieldGames</a>
+                <ui class="navli"><a class="navlink" href="https://smart-assist.netlify.app" target="_blank">Smart-Assist</a>
             </ui>
+        </nav>
+    </div>
+    <div style="top:24px;position:fixed;width: -webkit-fill-available;" class="navbar">
+        <nav>
+            <ui class="navli"><a class="navlink" onclick="easteregg()"></a></ui>
+            <ui class="navli"><a class="navlink" href="https://smart-assist.netlify.app">New: Smart-Assist</a></ui>
         </nav>
     </div>
     <div class="header">
