--- a/projects.html
+++ b/projects.html
@@ -17,6 +17,7 @@
                         target="_blank">Student-Zone</a></ui>
                 <ui class="navli"><a class="navlink" href="https://supernet.netlify.app" target="_blank">SuperNet</a></ui>
                 <ui class="navli"><a class="navlink" href="https://fieldgames.netlify.app" target="_blank">FieldGames</a>
+                    <ui class="navli"><a class="navlink" href="https://smart-assist.netlify.app" target="_blank">Smart-Assist</a>
                 </ui>
             </nav>
         </div>
