--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
             <ui class="navli"><a class="navlink" href="https://github.com/bcat1023" target="_blank">GitHub</a></ui>
         </nav>
     </div>
+    <script>
+        function easteregg() {
+            alert(`lol.com.net.tek.no.yes.amazon.music.is.good`);
+        }
+    </script>
 </body>
 
 </html>
