--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="main.css" media="screen" />
+    <link href="https://focused-feynman-c04b13.netlify.app/main.css" rel="stylesheet" type="text/css" />
     <title>Home | Bthecat World | New: Smart-Assist</title>
     <script src="https://kit.fontawesome.com/f5b6b4399c.js" crossorigin="anonymous"></script>
 </head>
