--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://focused-feynman-c04b13.netlify.app/main.css" rel="stylesheet" type="text/css" />
     <title>Projects | Bthecats World</title>
     <script src="https://kit.fontawesome.com/f5b6b4399c.js" crossorigin="anonymous"></script>
