Update to show formscript

--- a/index.html
+++ b/index.html
@@ -21,12 +21,7 @@
             </ui>
         </nav>
     </div>
-    <div style="top:24px;position:fixed;width: -webkit-fill-available;" class="navbar">
-        <nav>
-            <ui class="navli"><a class="navlink" onclick="easteregg()"></a></ui>
-            <ui class="navli"><a class="navlink" href="https://smart-assist.netlify.app">New: Smart-Assist</a></ui>
-        </nav>
-    </div>
+
     <div class="header">
         <h1>Welcome To Bthecat World</h1>
     </div>
@@ -67,7 +62,7 @@
     </div>
     <script>
         function easteregg() {
-            alert(`lol.com.net.tek.no.yes.amazon.music.is.good`);
+            alert(`lol.com.net.tek.no.yes.amazon.music.is.good.com`);
         }
     </script>
 </body>
