--- a/projects.html
+++ b/projects.html
@@ -16,10 +16,13 @@
                 <ui class="navli"><a class="navlink" href="/projects.html">Projects</a></ui>
                 <ui class="navli"><a class="navlink" href="https://student-zone.netlify.app"
                         target="_blank">Student-Zone</a></ui>
-                <ui class="navli"><a class="navlink" href="https://supernet.netlify.app" target="_blank">SuperNet</a></ui>
-                <ui class="navli"><a class="navlink" href="https://fieldgames.netlify.app" target="_blank">FieldGames</a>
-                    <ui class="navli"><a class="navlink" href="https://smart-assist.netlify.app" target="_blank">Smart-Assist</a>
+                <ui class="navli"><a class="navlink" href="https://supernet.netlify.app" target="_blank">SuperNet</a>
                 </ui>
+                <ui class="navli"><a class="navlink" href="https://fieldgames.netlify.app"
+                        target="_blank">FieldGames</a>
+                    <ui class="navli"><a class="navlink" href="https://smart-assist.netlify.app"
+                            target="_blank">Smart-Assist</a>
+                    </ui>
             </nav>
         </div>
     </div>
@@ -46,17 +49,20 @@
         <li style="background-color: green;" class="boxli"><a class="boxli"
                 href="https://smart-assist.netlify.app">Smart-Assist</a></li>
 
-</nav></div>
+    </nav>
+</div>
 <div class="navbarpro1">
     <nav class="boxli">
         <li style="background-color: purple;" class="boxli"><a class="boxli"
-            href="#you_really_thought_this_would_do_something">More</a></li>
+                href="https://formscript.netlify.app">FormScript</a></li>
+        <li style="background-color: gray;" class="boxli"><a class="boxli"
+                href="#you_really_thought_this_would_do_something">More</a></li>
     </nav>
 </div>
-                <div style="bottom: 0px;position: fixed;width: -webkit-fill-available;" class="navbar">
-        <nav>
-            <ui class="navli"><i class="far fa-copyright" style="color:white;"></i><a class="navlink" href="#">2020</a></ui>
-            <ui class="navli"><a class="navlink" href="https://github.com/bcat1023" target="_blank">GitHub</a></ui>
-        </nav>
-    </div>
+<div style="bottom: 0px;position: fixed;width: -webkit-fill-available;" class="navbar">
+    <nav>
+        <ui class="navli"><i class="far fa-copyright" style="color:white;"></i><a class="navlink" href="#">2020</a></ui>
+        <ui class="navli"><a class="navlink" href="https://github.com/bcat1023" target="_blank">GitHub</a></ui>
+    </nav>
+</div>
 </div>
