Added formscript to <nav>'s

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <ui class="navli"><a class="navlink" href="https://supernet.netlify.app" target="_blank">SuperNet</a></ui>
             <ui class="navli"><a class="navlink" href="https://fieldgames.netlify.app" target="_blank">FieldGames</a>
                 <ui class="navli"><a class="navlink" href="https://smart-assist.netlify.app" target="_blank">Smart-Assist</a>
+                    <ui class="navli"><a class="navlink" href="https://formscript.netlify.app" target="_blank">FormScript</a>
             </ui>
         </nav>
     </div>
