--- a/projects.html
+++ b/projects.html
@@ -23,6 +23,7 @@
                     <ui class="navli"><a class="navlink" href="https://smart-assist.netlify.app"
                             target="_blank">Smart-Assist</a>
                     </ui>
+                    <ui class="navli"><a class="navlink" href="https://formscript.netlify.app" target="_blank">FormScript</a>
             </nav>
         </div>
     </div>
